--- a/.github/workflows/renovate.yaml
+++ b/.github/workflows/renovate.yaml
@@ -4,7 +4,7 @@ name: Renovate
 permissions: { contents: read }
 
 on:
-  schedule: [{ cron: '0 * * * *' }]
+  schedule: [{ cron: "0 * * * *" }]
   workflow_dispatch:
     inputs:
       dry-run:
@@ -34,15 +34,15 @@ jobs:
         uses: actions/create-github-app-token@29824e69f54612133e76f7eaac726eef6c875baf # v2.2.1
         id: app-token
         with:
-          app-id: '${{ secrets.BOT_APP_ID }}'
-          private-key: '${{ secrets.BOT_APP_PRIVATE_KEY }}'
+          app-id: "${{ secrets.BOT_APP_ID }}"
+          private-key: "${{ secrets.BOT_APP_PRIVATE_KEY }}"
 
       - name: Run Renovate
         uses: renovatebot/github-action@44f24283a60f64273f1294932f16ba61193cccca # v46.1.0
         env:
           LOG_LEVEL: "${{ inputs.log-level || 'debug' }}"
           RENOVATE_AUTODISCOVER: true
-          RENOVATE_AUTODISCOVER_FILTER: '${{ github.repository }}'
-          RENOVATE_DRY_RUN: '${{ inputs.dry-run == true }}'
+          RENOVATE_AUTODISCOVER_FILTER: "${{ github.repository }}"
+          RENOVATE_DRY_RUN: "${{ inputs.dry-run == true }}"
         with:
-          token: '${{ steps.app-token.outputs.token }}'
+          token: "${{ steps.app-token.outputs.token }}"
